Should now output more info about build process. Added permission to use vibration to project. Fixed name issue